--- a/assets/CSS/estilos.css
+++ b/assets/CSS/estilos.css
@@ -3,6 +3,8 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-image: url("../images/FondoPrincipal.png");
+    background-size: cover;
 }
 
 h1, h2 {
