--- a/assets/CSS/estilos.css
+++ b/assets/CSS/estilos.css
@@ -94,9 +94,12 @@ section {
 }
 
 /* Estilos del pie de página */
-.pie-pagina {
+footer {
     background-color: #333;
     color: #fff;
-    text-align: center;
     padding: 20px;
 }
+footer > p {
+    text-align: center;
+}
+
