cabecera min-height 200px

--- a/assets/CSS/estilos.css
+++ b/assets/CSS/estilos.css
@@ -39,6 +39,7 @@ p {
     font-family: "Adigiana Toybox";
     background-image: url("../images/Cabezera_background5.jpg");
     background-size: cover;
+    min-height: 200px;
     display: flex;
     justify-content: space-between;
     align-items: center;
